# rpiCoffee

./: .coverage  .env.example  .gitattributes  .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml  locallm.md  localtts.md  pyproject.toml  requirements-dev.txt  run-app-local.bat  run-local.bat  setup.sh  start.sh  status.sh  stop.sh  test_hailo.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  README.md  __init__.py  config.py  entrypoint.sh  main.py  pipeline.py  pipeline_engine.py  pipeline_executor.py  registry.py  requirements.txt
app/admin/: router.py
app/api/: registry_routes.py
app/models/: __init__.py  manifest.py  registry.py
app/sensor/: mock.py  picoquake_acq.py  picoquake_reader.py  reader.py
app/services/: __init__.py  classifier_client.py  hailo_ollama_manager.py  llm_client.py  llm_mock_client.py  ml_client.py  ollama_adapter.py  ollama_client.py  remote_save_client.py  training_data.py  tts_client.py
data/: black-20260209-080541.csv.sample  cappuccino-20260209-080802.csv.sample  espresso-20260209-080702.csv.sample  pipeline.json
docs/: architecture-and-dataflow.md  local-development.md  manifest-spec.md  setup-raspberry-pi.md
locallm_mock/: main.py
localml_mock/: main.py
localtts/: Dockerfile  main.py
remote_save_mock/: Dockerfile  main.py  requirements.txt
services/classifier/: Dockerfile  README.md  features.py  main.py  model_manager.py  requirements.txt
services/llm-ollama/: Dockerfile  README.md  main.py
tests/: conftest.py
(+65 files in other folders)
