[project]
name = "rpicoffee"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.coverage.run]
source = ["app", "services"]
omit = [
    "*/__pycache__/*",
    "*/test_*",
    "tests/*",
    "app/sensor/picoquake_acq.py",
    "app/sensor/picoquake_reader.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
